--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "@halchester/esdb",
   "version": "1.0.0",
   "license": "MIT",
+  "keywords": [
+    "in-memory",
+    "database",
+    "esdb",
+    "db",
+    "in-memory database"
+  ],
   "devDependencies": {
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
