--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "easy-db",
+  "name": "your-db",
   "description": "In memory database to play around with!",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "license": "MIT",
   "keywords": [
     "in-memory",
